# cc-demos

./: .buildinfo  .envrc  README.md  cvpr2025.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: cvpr2025.doctree  environment.pickle  index.doctree
_sources/: cvpr2025.md.txt
cvpr2025/: backprojection.py  cvpr2025.py  ir_camera.py  nlos_bp.ipynb  nlos_bp.py  nlos_datadriven_capture.py  nlos_datadriven_demo.py  nlos_datadriven_eval.ipynb  nlos_pose_eval.ipynb  test.py  test2.py
cvpr2025/data/: car.mtl  road.mtl  scene.gltf  scene.mtl  scene.usdc  stop_line.mtl
cvpr2025/gui/: dashboard.py  full_gui copy.py  full_gui.py  full_gui_pyrender.py  simple_gui.py
cvpr2025/gui/mpc/: reference_path.py
cvpr2025/ml/: dataloader.py  model.py  pose_cat_dataloader.py  pose_dataloader.py
cvpr2025/mpc/: MPC.py  map.py  planner.py  reference_path.py  simulation.py
docs/: conf.py  cvpr2025.md  index.md
robospad/: run.py
