[tool.poetry]
name = "cc_demos"
version = "0.1.0"
description = "CC Demos"
authors = ["Camera Culture <a2cc@media.mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
cc-hardware = {path = "../../cc-hardware/cc-hardware-main", develop = true}
trimesh = "^4.6.11"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
